--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+# requirements.txt
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+python-multipart==0.0.6
 pydantic==2.5.0
 webdavclient3==3.14.6
-requests==2.31.0
+jieba==0.42.1
